2010-03-20  Soren Hauberg  <hauberg@gmail.com>

	* general/interp2.m: For nearest neighbour interpolation ceil (instead of
    floor) at the center of the data intervals to be compatible with Matlab.
    Add test.
	* general/interpn.m: Ditto.

2010-03-19  Jaroslav Hajek  <highegg@gmail.com>

	* strings/strmatch.m (strtrimr): Rewrite for correct behavior.
	Add test.

2010-03-18  Petr Mikulik <mikulik@physics.muni.cz>

	* /plot/print.m: Add '-append' option.

2010-03-18  Ben Abbott <bpabbott@mac.com>

	* /plot/print.m: print.m: Detabify.

2010-03-16  Jaroslav Hajek  <highegg@gmail.com>

	* general/nthroot.m: Remove.
	* general/module.mk: Update.
	* specfun/nthroot.m: New source.
	* specfun/module.mk: Update.

2010-03-16  Jaroslav Hajek  <highegg@gmail.com>

	* miscellaneous/intwarning.m: Deprecate.

2010-03-11  Jaroslav Hajek  <highegg@gmail.com>

	* strings/index.m: Make it a wrapper for strfind.

2010-03-11  Jaroslav Hajek  <highegg@gmail.com>

	* strings/strchr.m: Optimize.

2010-03-05  Soren Hauberg  <hauberg@gmail.com>

	* pkg/pkg.m (write_index): include classes in autogenerated INDEX files.

2010-03-05  Soren Hauberg  <hauberg@gmail.com>

	* plot/fplot.m: Ensure that 'limits' is a 2 or 4 vector, and that 'fn' is a
	function.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* testfun/test.m: Support catching warnings and errors by IDs.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumdim.m: Optimize the summation case.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumdim.m: New function.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fzero.m: Avoid division by zero.

2010-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminbnd.m: Fix tests.

2010-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminbnd.m: Fix termination tolerances.

2010-03-02  Jaroslav Hajek  <highegg@gmail.com>

	* polynomial/convn.m: Remove.
	* polynomial/module.mk: Update.
